<resources>
    <string name="app_name">Tasks3Application</string>
    <string name="button_counter">  TO COUNTER</string>
    <string name="button_game">TO GAME</string>
    <string name="view_model">Use ViewModel</string>
    <string name="button_add">INCREASE COUNTER</string>
    <string name="edit_hint">Rakam Giriniz</string>
    <string name="turns_count">Tur Sayısı: %1$d</string>
    <string name="win_message">Kazandın</string>
    <string name="again_message">Tekrar Dene</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btn_guess">guess</string>
    <string name="btn_clear">clear</string>
    <string name="char_and_number">Character: %1$s- Number: %2$d</string>
</resources>